--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
       "ejs": "^3.1.9",
       "express": "^4.18.1",
       "express-ejs-layouts": "^2.5.1",
+      "fcm-node": "^1.6.1",
+      "firebase": "^10.5.2",
+      "firebase-admin": "^11.11.0",
       "form-data": "^4.0.0",
       "mongodb": "4.9",
       "mongoose": "^6.6.1",
       "multer": "^1.4.5-lts.1",
-      "node-schedule": "^2.1.1"
+      "node-schedule": "^2.1.1",
+      "web-push": "^3.6.6"
    },
    "devDependencies": {
       "nodemon": "^3.0.1"
