--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "favicon-192x192.png",
+      "src": "./favicon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
