--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,7 +16,7 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "orientation": "landscape",
+  "orientation": "portrait",
   "theme_color": "#ffffff",
   "background_color": "#ffffff"
 }
